--- a/demo.html
+++ b/demo.html
@@ -1,29 +1,20 @@
 <html>
-    <head>
-        <title>My first three.js app</title>
-        <link rel="stylesheet/less" type="text/css" href="styles.less" />
-        <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
-        <style>
-            body { margin: 0; }
-            canvas { width: 100%; height: 100% }
-            .level {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    pointer-events: auto;
-    transform-style: preserve-3d;
-    transition: opacity 1s cubic-bezier(0.7, 0, 0.3, 1) 0s, transform 1s 0s;
-}
-            .level.level--current {
-               transform: translateZ(15vmin) rotate3d(0, 0, 1, 20deg);
-            }
-        </style>
-<style type="text/css" url></style>
-    </head>
-    <body>
 
-<div class="level level--current">
+<head>
+    <title>Map Guide</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script src="js/main.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="headBar">Museum Map</div>
+        <div class="museum">
+            <div class="surroundings">
+                <img class="surroundings__map" src="images/surroundings.svg" alt="surroundings">
+            </div>
+            <div class="building">
+                <div class="level level--open">
                     <svg class="map map--1" viewBox="0 0 1200 800" width="100%" height="100%" preserveAspectRatio="xMidYMid meet">
                         <title>Map Level 1</title>
                         <polygon points="1035.94 787.41 1035.94 423.16 855.37 423.16 855.37 350.52 1187.28 350.52 1187.28 12.59 548.09 12.59 548.09 68.87 437.36 68.87 437.36 12.59 49.37 12.59 49.37 366.5 12.72 366.5 12.72 787.41 356.2 787.41 414.93 584.41 554.4 584.41 627.81 787.41 1035.94 787.41" class="map__ground" />
@@ -71,60 +62,100 @@
                     <div class="level__pins">
                         <a class="pin pin--1-1" data-category="1" data-space="1.01" href="#" aria-label="Pin for Apple Heart">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--appleheart"><use xlink:href="#icon-appleheart"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--appleheart">
+                                    <use xlink:href="#icon-appleheart"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-2" data-category="1" data-space="1.02" href="#" aria-label="Pin for Crazy Banana">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--bananas"><use xlink:href="#icon-bananas"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--bananas">
+                                    <use xlink:href="#icon-bananas"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-3" data-category="2" data-space="1.03" href="#" aria-label="Pin for Folding Life">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--origami"><use xlink:href="#icon-origami"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--origami">
+                                    <use xlink:href="#icon-origami"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-4" data-category="3" data-space="1.04" href="#" aria-label="Pin for Dress me not">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--dress"><use xlink:href="#icon-dress"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--dress">
+                                    <use xlink:href="#icon-dress"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-5" data-category="4" data-space="1.05" href="#" aria-label="Pin for Meditation Garden">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--tree2"><use xlink:href="#icon-tree2"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--tree2">
+                                    <use xlink:href="#icon-tree2"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-6" data-category="1" data-space="1.06" href="#" aria-label="Pin for Seed of Life">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--avocado"><use xlink:href="#icon-avocado"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--avocado">
+                                    <use xlink:href="#icon-avocado"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-7" data-category="1" data-space="1.07" href="#" aria-label="Pin for Raw Delight">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--cake"><use xlink:href="#icon-cake"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--cake">
+                                    <use xlink:href="#icon-cake"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-8" data-category="1" data-space="1.08" href="#" aria-label="Pin for The Wizard">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--mushroom"><use xlink:href="#icon-mushroom"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--mushroom">
+                                    <use xlink:href="#icon-mushroom"></use>
+                                </svg>
                             </span>
                         </a>
                         <a class="pin pin--1-9" data-category="1" data-space="1.09" href="#" aria-label="Pin for Smoothies &amp; Soul">
                             <span class="pin__icon">
-                                <svg class="icon icon--pin"><use xlink:href="#icon-pin"></use></svg>
-                                <svg class="icon icon--logo icon--pear"><use xlink:href="#icon-pear"></use></svg>
+                                <svg class="icon icon--pin">
+                                    <use xlink:href="#icon-pin"></use>
+                                </svg>
+                                <svg class="icon icon--logo icon--pear">
+                                    <use xlink:href="#icon-pear"></use>
+                                </svg>
                             </span>
                         </a>
                     </div>
+                </div>
+            </div>
+            <!-- /level__pins -->
         </div>
-                    <!-- /level__pins -->
-    </body>
+    </div>
+</body>
+
 </html>
