update js and css

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,10 @@
 
 <body>
     <div class="container">
+        <!-- Head Bar -->
         <div class="headBar">Museum Map</div>
+        <!-- /Head Bar -->
+        <!-- Museum -->
         <div class="museum">
             <div class="surroundings">
                 <img class="surroundings__map" src="images/surroundings.svg" alt="surroundings">
@@ -156,6 +159,16 @@
             </div>
             <!-- /level__pins -->
         </div>
+        <!-- /Museum -->
+        <!-- Nav -->
+        <nav class="navBar navBar--hidden">
+            <button class="btn nav__btn--all-levels" aria-label="Back to all levels">
+                <svg class="icon icon--stack">
+                    <use xlink:href="#icon-stack"></use>
+                </svg>
+            </button>
+        </nav>
+        <!-- /Nav -->
     </div>
 </body>
 
